@@ -93,8 +93,8 @@ class JavaSerial(SerialBase):
 
         if self._stopbits == STOPBITS_ONE:
             jstopbits = comm.SerialPort.STOPBITS_1
-        elif stopbits == STOPBITS_ONE_POINT_FIVE:
-            self._jstopbits = comm.SerialPort.STOPBITS_1_5
+        elif self._stopbits == STOPBITS_ONE_POINT_FIVE:
+            jstopbits = comm.SerialPort.STOPBITS_1_5
         elif self._stopbits == STOPBITS_TWO:
             jstopbits = comm.SerialPort.STOPBITS_2
         else:
@@ -125,7 +125,7 @@ class JavaSerial(SerialBase):
         self.sPort.setFlowControlMode(jflowin | jflowout)
 
         if self._timeout >= 0:
-            self.sPort.enableReceiveTimeout(self._timeout*1000)
+            self.sPort.enableReceiveTimeout(int(self._timeout*1000))
         else:
             self.sPort.disableReceiveTimeout()
 
