@@ -480,7 +480,10 @@ Version 2.8      2014-xx-xx
 ---------------------------
 - [FTR pyserial:37] Support fileno() function in the socket protocol
 - Posix: [Patch pyserial:31] Mark/space parity on Linux
-- Linux: [Patch pyserial:32] Module list_ports for linux should include the product information as description.
+- Linux: [Patch pyserial:32] Module list_ports for linux should include the
+  product information as description.
+- Java: fix 2 bugs (stop bits if/else and non-integer timeouts) (Torsten
+  Roemer)
 
 Bugfixes:
 
